Updated Footer language, added version, fixed some styling. Removed some too much text from main page

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,22 +1,32 @@
 .footer {
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5rem;
-    background-color: #000000;
-    margin: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.05);
-  }
-  
-  .footerContent {
-    display: flex;
-    height: inherit;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .footer p {
-    margin: 1;
-    font-size: 14px;
-    color: #fff;
-  }
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #000000;
+  margin: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.05);
+}
+
+.footerContent {
+  display: flex;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer p {
+  margin: 1;
+  font-size: 16px; /* Increased font size */
+  color: #fff;
+  padding: 5%;
+}
+
+.cbicaLink {
+  color: #E0E0E0; /* Lighter shade for better readability */
+  text-decoration: none;
+}
+
+.cbicaLink:hover {
+  text-decoration: underline; /* Adds an underline on hover for better visibility */
+}
